  * Fix minor whitespace inconsistencies in NEWS and README files
  * Skip munin init script in systemd environment (the created
    directories are generated via systemd-tmpfiles)
  * Plugins mysql_*: switch "mysqluser" from "debian-sys-maint" to "root"
    (Closes: #862238, #864845)
  * Patch for Makefile: set INSTALL if necessary

 -- Lars Kruse <devel@sumpfralle.de>  Mon, 06 Aug 2018 03:20:53 +0200

munin (2.999.8-1) experimental; urgency=medium

  [ Lars Kruse ]
  * New upstream beta release
  * munin: include manpage for "munin-httpd"
  * munin-node: include manpage for "munin-doc"
  * replace embedded copies of "fonts-materialdesignicons-webfont" and
    "libjs-jquery" with dependencies and symlinks
  * munin-plugins-extra: replace Suggest for "python" with "python3"
    (since all relevant plugins switched from python2 to python3)
  * libmunin-perl: add missing dependency "libparams-validate-perl"
    (Closes: #900775)
  * sysvrc-init script for munin-httpd: fixed path of executable
  * simplify init script for munin (rrdcached) via "init-d-script"
  * simplify init script for munin-httpd via "init-d-script"
  * simplify init script for munin-async via "init-d-script"
  * simplify init script for munin-node via "init-d-script"
  * move "--fail-missing" from "dh_install" to "dh_missing"
  * remove obsolete patch "0001-fixup-2.999.6-release"
  * remove references to missing documentation (munin-doc.* and munin-faq.*)
    from "munin-node" (removed by upstream)
  * improve README.PluginConfiguration (for "munin-node")
  * create /run/munin also for non-systemd systems
  * increase compatibility level from 10 to 11
  * patch: use separate spool directory for munin-async
  * fix spelling mistake in NEWS, thanks lintian
  * extend package descriptions (satisfying lintian's info level)
  * munin-doc: remove obsolete Depends on munin-common
  * patch module documentation for Munin::Master::LimitsOld
    (thanks lintian)