@@ -44,7 +44,6 @@ usr/share/munin/plugins/samba
 usr/share/munin/plugins/smart_
 usr/share/munin/plugins/spamstats
 usr/share/munin/plugins/squeezebox_
-usr/share/munin/plugins/squeezebox_
 usr/share/munin/plugins/surfboard
 usr/share/munin/plugins/tomcat_
 usr/share/munin/plugins/vserver_*
